# bf-haskell

./: .gitignore  CHANGELOG.md  README.md  bf-haskell.cabal
docs/: BfHaskell-BettingAPI-Betting.html  BfHaskell-BettingAPI-Request.html  BfHaskell-BettingAPI-Response.html  BfHaskell-BettingAPI-Types.html  BfHaskell-BfHaskell.html  BfHaskell-Common-Logging.html  BfHaskell-Common-Odds.html  BfHaskell-DSL-Betting.html  BfHaskell-DSL-Heartbeat.html  BfHaskell-DSL-Login.html  BfHaskell-DSL-Streaming.html  BfHaskell-Dsl-Betting.html  BfHaskell-Dsl-Heartbeat.html  BfHaskell-Dsl-Login.html  BfHaskell-Dsl-Streaming.html  BfHaskell-HeartbeatAPI-Heartbeat.html  BfHaskell-HeartbeatAPI-Types.html  BfHaskell-Internal-JsonTypes.html  BfHaskell-Internal-Network.html  BfHaskell-Internal-Rpc.html  BfHaskell-LoginAPI-Login.html  BfHaskell-LoginAPI-Types.html  BfHaskell-StreamingAPI-CommandExecutor.html  BfHaskell-StreamingAPI-Model.html  BfHaskell-StreamingAPI-Prices.html  BfHaskell-StreamingAPI-SslClient.html  BfHaskell-StreamingAPI-Streaming.html  BfHaskell-StreamingAPI-StreamingComm.html  BfHaskell-StreamingAPI-StreamingMarkets.html  BfHaskell-StreamingAPI-StreamingOrders.html  BfHaskell-StreamingAPI-StreamingProcessor.html  BfHaskell-StreamingAPI-StreamingUtils.html  BfHaskell-StreamingAPI-Types.html  bf-haskell.haddock  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  (+20 more)
docs/src/: BfHaskell.BettingAPI.Betting.html  BfHaskell.BettingAPI.Request.html  BfHaskell.BettingAPI.Response.html  BfHaskell.BettingAPI.Types.html  BfHaskell.BfHaskell.html  BfHaskell.Common.Logging.html  BfHaskell.Common.Odds.html  BfHaskell.DSL.Betting.html  BfHaskell.DSL.Heartbeat.html  BfHaskell.DSL.Login.html  BfHaskell.DSL.Streaming.html  BfHaskell.Dsl.Betting.html  BfHaskell.Dsl.Heartbeat.html  BfHaskell.Dsl.Login.html  BfHaskell.Dsl.Streaming.html  BfHaskell.HeartbeatAPI.Heartbeat.html  BfHaskell.HeartbeatAPI.Types.html  BfHaskell.Internal.JsonTypes.html  BfHaskell.Internal.Network.html  BfHaskell.Internal.Rpc.html  BfHaskell.LoginAPI.Login.html  BfHaskell.LoginAPI.Types.html  BfHaskell.StreamingAPI.CommandExecutor.html  BfHaskell.StreamingAPI.Model.html  BfHaskell.StreamingAPI.Prices.html  BfHaskell.StreamingAPI.SslClient.html  BfHaskell.StreamingAPI.Streaming.html  BfHaskell.StreamingAPI.StreamingComm.html  BfHaskell.StreamingAPI.StreamingMarkets.html  BfHaskell.StreamingAPI.StreamingOrders.html  BfHaskell.StreamingAPI.StreamingProcessor.html  BfHaskell.StreamingAPI.StreamingUtils.html  BfHaskell.StreamingAPI.Types.html
src/BfHaskell/: BfHaskell.hs
src/BfHaskell/BettingAPI/: Betting.hs  Request.hs  Response.hs  Types.hs
src/BfHaskell/Common/: Logging.hs  Odds.hs
src/BfHaskell/DSL/: Betting.hs  Heartbeat.hs  Login.hs  Streaming.hs
src/BfHaskell/HeartbeatAPI/: Heartbeat.hs  Types.hs
src/BfHaskell/Internal/: Exceptions.hs  JsonTypes.hs  Network.hs  Rpc.hs
src/BfHaskell/LoginAPI/: Login.hs  Types.hs
src/BfHaskell/StreamingAPI/: CommandExecutor.hs  Model.hs  Prices.hs  SslClient.hs  Streaming.hs  StreamingComm.hs  StreamingMarkets.hs  StreamingOrders.hs  StreamingProcessor.hs  StreamingUtils.hs  Types.hs  VirtualPrices.hs
